# NexFilm

./: .agent  .gitignore  Cargo.toml  tauri.conf.json
src/: app_state.rs  commands.rs  core_math.rs  geometry.rs  io_processor.rs  lib.rs  main.rs  pipeline.rs  test_dialog.rs
ui/: index.html  main.js  style.css
