[package]
name = "nexfilm_engine"
version = "0.1.0"
edition = "2021"
description = "Scientific Film Inversion Engine"

[dependencies]
nalgebra = "0.32"
image = "0.24"
rayon = "1.8"
clap = { version = "4.5", features = ["derive"] }
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["sync"] }
base64 = "0.22"
rfd = "0.14"
imageproc = "0.23"
libraw-rs = "0.0.4"
libraw-rs-sys = "0.0.4"
dashmap = "6.2.1"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[patch.crates-io]
libraw-rs-sys = { path = "vendor/libraw-rs-sys/libraw-rs-sys-0.0.4+libraw-0.20.1" }
